welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:29: error: value Green is not a member of object java.awt.Color
		{faireMotif(Color.YELLOW,Color.RED,Color.BLUE,Color.Green)
                                                                    ^